# image-denoising-nlm-vs-mean

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/denoise_nlm/: __init__.py  benchmark.py  filters.py  io.py  metrics.py  noise.py  run.py
tests/: test_metrics.py
