[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "denoise-nlm"
version = "0.1.0"
description = "Mean 3x3 vs Non-Local Means (NLM) denoising with MSE/PSNR/runtime benchmarking."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy>=1.23", "opencv-python>=4.8"]
license = {text = "MIT"}

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
